src/css/1-header.css
.header {
  border-bottom: 1px solid rgba(12, 12, 12, 0.1);
}

header .container {
  display: flex;
  align-items: baseline;
  justify-content: space-between;
}

.header-logo {
  display: inline-block;
  padding: 28px 0;

  font-weight: 500;
  color: var(--main);
}

.header-nav {
  display: none;
}

.header-social-list {
  display: none;
}

/*Mobile-menu*/
.burger-btn {
  border: none;
  background-color: transparent;
}

.burger-btn-icon {
  stroke: var(--main);
}

/*Mobile-menu-end*/

@media only screen and (min-width: 768px) {
  .header-logo {
    font-size: 20px;
    padding: 34px 0;
  }

  .burger-btn-icon {
    width: 40px;
    height: 40px;
  }

  .close-svg-mobile {
    position: absolute;
    top: 26px;
    right: 32px;
    border: none;
    background-color: transparent;
  }

  .header-mobile-list {
    row-gap: 32px;
  }
}

@media only screen and (min-width: 1280px) {
  .header-logo {
    font-size: 20px;
    padding: 32px 0;
  }

  .header-nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  .header-nav-list {
    display: flex;
    align-items: center;
    column-gap: 40px;
  }

  .header-nav-link {
    position: relative;
    font-weight: 500;
    font-size: 14px;
    line-height: 1.29;
    color: var(--main);
  }

  .header-nav-link.active::after {
    position: absolute;
    content: '';
    width: 8px;
    height: 8px;
    border-radius: 50%;
    background-color: var(--accent);
    left: 50%;
    bottom: -15px;
    transform: translateX(-50%) translateY(-50%);
  }

  .header-social-list {
    display: flex;
    align-items: center;
    column-gap: 10px;
  }

  .header-social-item {
    width: 36px;
    height: 36px;
  }

  .header-social-link {
    width: 100%;
    height: 100%;

    display: flex;
    align-items: center;
    justify-content: center;

    border: 1px solid rgba(12, 12, 12, 0.1);
    border-radius: 10px;

    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }

  .header-social-item:hover .header-social-link {
    border: 1px solid rgba(51, 80, 233, 0.1);
    fill: var(--accent);
  }

  .burger-btn {
    display: none;
  }
}

